# TataTuya

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  review.md  setup.sh  test-tuya.sh  test.py  tuya_utils.py
.codex/skills/tatatuya-reviewer/: SKILL.md
.github/workflows/: release-macos.yml
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  PRODUCT_SPEC.md
gui/: __init__.py  app.py  formatters.py  main_window.py  workers.py
gui/components/: device_table.py
packaging/: tatatuya.spec
scripts/: build_macos.sh  create_dmg.sh
src/tatatuya/: __init__.py  __main__.py  application.py  paths.py
src/tatatuya/domain/: __init__.py  billing.py  energy.py  errors.py  models.py
src/tatatuya/infrastructure/: __init__.py  database.py  logging_setup.py  migrations.py  tuya_legacy.py
src/tatatuya/services/: __init__.py  billing_service.py  device_service.py  history_service.py  ports.py  reading_service.py  (+1 more)
tests/integration/: test_billing_workflow.py  test_database.py  test_individual_status_workflow.py  test_installed_launcher.py  test_reading_service.py  test_release_readiness_workflow.py
tests/ui/: test_calculation_dialog.py  test_device_info_dialog.py  test_device_status_dialog.py  test_error_dialog.py  test_history_dialog.py  test_main_window.py  test_settings_dialog.py
tests/unit/: test_billing.py  test_billing_service.py  test_energy.py  test_history_service.py  test_packaging.py  test_paths.py  test_settings_service.py  test_tuya_client.py  test_tuya_parsers.py  test_tuya_signing.py  test_ui_formatters.py
(+35 files in other folders)
