[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "tatatuya"
version = "0.1.0"
description = "Citiri și calcule pentru contoare de energie Tuya"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
]
package = [
    "pyinstaller>=6.11",
]

[project.scripts]
tatatuya = "tatatuya.application:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"tatatuya.ui" = ["styles.qss", "icons/*.svg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.coverage.run]
source = ["tatatuya"]
